--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,15 @@ importlib_resources==6.4.5
 ipykernel==6.29.5
 ipython==8.18.1
 jedi==0.19.2
+Jinja2==3.1.4
+joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+jupyter-summarytools==0.2.3
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.7
+MarkupSafe==3.0.2
 matplotlib==3.9.3
 matplotlib-inline==0.1.7
 nbformat==5.10.4
@@ -43,13 +47,17 @@ pytz==2024.2
 pyzmq==26.2.0
 referencing==0.35.1
 rpds-py==0.22.3
+scikit-learn==1.6.0
+scipy==1.13.1
 seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
 tenacity==9.0.0
+threadpoolctl==3.5.0
 tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
 wcwidth==0.2.13
+xgboost==2.1.3
 zipp==3.21.0
