--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ scipy==1.13.1
 seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
+streamlit==1.25.0
 tenacity==9.0.0
 threadpoolctl==3.5.0
 tornado==6.4.2
